# nnc-joint-solver

./: .gitignore  README.md  README_zh_cn.md  pyproject.toml
benchmarks/: run_solver_benchmark.py
benchmarks/problems/: resnet18_o3_1m.problem.json
src/nnc_joint_solver/: __init__.py  base.py  benchmark.py  cli.py  solve_utils.py  solver.py  validation.py
src/nnc_joint_solver/ir/: __init__.py
src/nnc_joint_solver/v0/: __init__.py  solver.py
src/nnc_joint_solver/v1/: __init__.py  solver.py
tests/: test_benchmark_smoke.py  test_solver.py
