[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nnc-joint-solver"
version = "0.1.0"
description = "Standalone external joint tiling and SRAM placement solver for nnc-py"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
nnc-joint-solver = "nnc_joint_solver.cli:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

